<resources>
    <string name="app_name">Calculadora2</string>
    <string name="resultado">Resultado</string>
    <string name="b1">7</string>
    <string name="b2">8</string>
    <string name="b3">9</string>
    <string name="bmas">+</string>
    <string name="b5">4</string>
    <string name="b6">5</string>
    <string name="b7">6</string>
    <string name="bmen">-</string>
    <string name="b9">1</string>
    <string name="b10">2</string>
    <string name="b11">3</string>
    <string name="bmul">*</string>
    <string name="bpun">.</string>
    <string name="b14">0</string>
    <string name="bigu">=</string>
    <string name="bdiv">/</string>


</resources>
