<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context="com.firesoul.calculadora2.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/black"
        android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="5">
                <!--Seleccione una figura -->

                <EditText
                    android:id="@+id/eNumero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightgray"
                    android:textColor="@color/black"
                    android:enabled="false"
                    android:textSize="12sp"
                    android:textStyle="italic|bold" />



            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_margin="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/b1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button2"
                    android:layout_margin="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/b2"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button3"
                    android:layout_margin="1dp"
                   android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/b3"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button4"
                    android:layout_margin="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/bmas"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/b5"
                    android:layout_margin="1dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button6"
                    android:layout_margin="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/b6"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button7"
                    android:layout_margin="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/b7"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button8"
                    android:layout_margin="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/bmen"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button9"
                    android:layout_margin="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/b9"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button10"
                    android:layout_margin="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/b10"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button11"
                    android:layout_margin="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/b11"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button12"
                    android:layout_margin="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/bmul"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button13"
                    android:layout_margin="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/bpun"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:layout_margin="1dp"
                    android:onClick="onButtonClicked"
                    android:text="@string/b14"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:onClick="onButtonClicked"
                    android:text="@string/bigu"
                    android:layout_margin="1dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:layout_margin="1dp"
                    android:onClick="onButtonClicked"
                    android:text="@string/bdiv"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
